--- a/journal/journal/Base.lproj/Main.storyboard
+++ b/journal/journal/Base.lproj/Main.storyboard
@@ -25,8 +25,47 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bL7-Bo-zAx" id="e3d-Q5-loO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="jVR-aG-Y9i">
+                                            <rect key="frame" x="36" y="19" width="303" height="62"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="193" translatesAutoresizingMaskIntoConstraints="NO" id="jvB-1T-MCA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="303" height="24"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JvW-vK-hRu">
+                                                            <rect key="frame" x="0.0" y="0.0" width="48.5" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="timestamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="E6X-s6-IUV">
+                                                            <rect key="frame" x="241.5" y="0.0" width="61.5" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="story" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hd-j1-7yW">
+                                                    <rect key="frame" x="0.0" y="29" width="33" height="33"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="jVR-aG-Y9i" firstAttribute="top" secondItem="e3d-Q5-loO" secondAttribute="topMargin" constant="8" id="Fe2-id-ERF"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="jVR-aG-Y9i" secondAttribute="bottom" constant="8" id="afI-9W-1hB"/>
+                                        <constraint firstItem="jVR-aG-Y9i" firstAttribute="leading" secondItem="e3d-Q5-loO" secondAttribute="leadingMargin" constant="20" id="kqk-9s-ZoW"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="jVR-aG-Y9i" secondAttribute="trailing" constant="20" id="vSh-Pu-KdM"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="nameLabel" destination="JvW-vK-hRu" id="s9K-uk-Vky"/>
+                                    <outlet property="storyLabel" destination="9hd-j1-7yW" id="qhN-Lg-EsN"/>
+                                    <outlet property="timestampLabel" destination="E6X-s6-IUV" id="RlZ-ft-Xot"/>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="tableCellSegue" id="1Mn-BD-JWM"/>
                                 </connections>
                             </tableViewCell>
@@ -64,16 +103,54 @@
             </objects>
             <point key="canvasLocation" x="-1308" y="97"/>
         </scene>
-        <!--Detail View Controller-->
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="DetailViewController" customModule="journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ila-Iu-MWP">
+                                <rect key="frame" x="20" y="136" width="335" height="445"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="create title here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sxg-Vc-6f9">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3Yr-eJ-UG2">
+                                        <rect key="frame" x="0.0" y="45" width="335" height="400"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="400" id="AE0-c1-86B"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ila-Iu-MWP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Pvp-cZ-DAM"/>
+                            <constraint firstItem="ila-Iu-MWP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ze3-kK-ImH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ila-Iu-MWP" secondAttribute="trailing" constant="20" id="hZK-Rl-a3a"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="BiM-93-wDt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="EgS-Lo-gpU">
+                            <connections>
+                                <action selector="save:" destination="BYZ-38-t0r" id="T7q-zx-G1O"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameTextField" destination="Sxg-Vc-6f9" id="mUN-Pp-7ef"/>
+                        <outlet property="storyView" destination="3Yr-eJ-UG2" id="qmc-Q6-jNH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
