completes project and allows user to create, update, delete, and persist changes of journal entries

--- a/CoreJournal/CoreJournal/Base.lproj/Main.storyboard
+++ b/CoreJournal/CoreJournal/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VRP-7q-c69">
                                 <rect key="frame" x="20" y="84" width="335" height="519"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="enter a title here:" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JOi-DL-tbs">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title here:" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JOi-DL-tbs">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -158,6 +158,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="uHb-Xc-64l"/>
+        <segue reference="P60-3u-vqV"/>
     </inferredMetricsTieBreakers>
 </document>
