--- a/journal/journal/Base.lproj/Main.storyboard
+++ b/journal/journal/Base.lproj/Main.storyboard
@@ -27,19 +27,25 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="jVR-aG-Y9i">
-                                            <rect key="frame" x="36" y="19" width="303" height="62"/>
+                                            <rect key="frame" x="26" y="19" width="323" height="62"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="193" translatesAutoresizingMaskIntoConstraints="NO" id="jvB-1T-MCA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="303" height="24"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jvB-1T-MCA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="24"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JvW-vK-hRu">
-                                                            <rect key="frame" x="0.0" y="0.0" width="48.5" height="24"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="24"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="xMp-5n-oUn"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="timestamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="E6X-s6-IUV">
-                                                            <rect key="frame" x="241.5" y="0.0" width="61.5" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="timestamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6X-s6-IUV">
+                                                            <rect key="frame" x="210" y="0.0" width="90" height="24"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="iQa-mY-lNq"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -58,8 +64,8 @@
                                     <constraints>
                                         <constraint firstItem="jVR-aG-Y9i" firstAttribute="top" secondItem="e3d-Q5-loO" secondAttribute="topMargin" constant="8" id="Fe2-id-ERF"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="jVR-aG-Y9i" secondAttribute="bottom" constant="8" id="afI-9W-1hB"/>
-                                        <constraint firstItem="jVR-aG-Y9i" firstAttribute="leading" secondItem="e3d-Q5-loO" secondAttribute="leadingMargin" constant="20" id="kqk-9s-ZoW"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="jVR-aG-Y9i" secondAttribute="trailing" constant="20" id="vSh-Pu-KdM"/>
+                                        <constraint firstItem="jVR-aG-Y9i" firstAttribute="leading" secondItem="e3d-Q5-loO" secondAttribute="leadingMargin" constant="10" id="kqk-9s-ZoW"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="jVR-aG-Y9i" secondAttribute="trailing" constant="10" id="vSh-Pu-KdM"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
