Update entryController to include mood in create and update functions.

--- a/JournalCoreData/JournalCoreData/Base.lproj/Main.storyboard
+++ b/JournalCoreData/JournalCoreData/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                                         <segments>
                                             <segment title="😊"/>
                                             <segment title="😐"/>
-                                            <segment title="☹️"/>
+                                            <segment title="😞"/>
                                         </segments>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JI0-Kq-HH0">
@@ -159,6 +159,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="descriptionTextView" destination="PdG-Nz-5G7" id="SIb-n0-2Ep"/>
+                        <outlet property="moodSegmentedControl" destination="rry-s3-F3H" id="F5b-CT-NBc"/>
                         <outlet property="titleTextField" destination="JI0-Kq-HH0" id="5kO-de-P5J"/>
                     </connections>
                 </viewController>
